[gd_scene load_steps=19 format=3 uid="uid://b2yxl1eqpdeoi"]

[ext_resource type="Script" path="res://scripts/ui/player_selector.gd" id="1_hbrj3"]
[ext_resource type="FontFile" uid="uid://bxfrdveuo38na" path="res://assets/fonts/crang/Crang.ttf" id="2_jbxfc"]
[ext_resource type="Texture2D" uid="uid://cnrnp1hc0injx" path="res://assets/sprites/menu/street_of_rage_city.png" id="2_xs8si"]
[ext_resource type="Texture2D" uid="uid://cvwv1j5fexns2" path="res://assets/sprites/characters/brawler-girl/idle.png" id="4_w22ou"]
[ext_resource type="AudioStream" uid="uid://y0fenoi1evmd" path="res://assets/sound/select.wav" id="5_3pplr"]
[ext_resource type="Texture2D" uid="uid://djowwudyld74a" path="res://assets/sprites/characters/long-tail/idle.png" id="5_hxvg6"]
[ext_resource type="AudioStream" uid="uid://4a5xqw13l3un" path="res://assets/sound/menu.mp3" id="6_wiyfn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4on5u"]
atlas = ExtResource("4_w22ou")
region = Rect2(0, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m505"]
atlas = ExtResource("4_w22ou")
region = Rect2(96, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_r42je"]
atlas = ExtResource("4_w22ou")
region = Rect2(192, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_t54kp"]
atlas = ExtResource("4_w22ou")
region = Rect2(288, 0, 96, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_jo0i6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4on5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m505")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r42je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t54kp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bts7n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qv3rd"]
atlas = ExtResource("5_hxvg6")
region = Rect2(0, 0, 74, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qyvn"]
atlas = ExtResource("5_hxvg6")
region = Rect2(74, 0, 74, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t57qg"]
atlas = ExtResource("5_hxvg6")
region = Rect2(148, 0, 74, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls4l1"]
atlas = ExtResource("5_hxvg6")
region = Rect2(222, 0, 74, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sfrxf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv3rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qyvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t57qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls4l1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PlayerSelector" type="CanvasLayer"]
layer = 0
script = ExtResource("1_hbrj3")
next_scene = "res://scenes/screens/level_1.tscn"
emits_loaded_signal = false

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1175.0
offset_right = 0.555664
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xs8si")
expand_mode = 3
stretch_mode = 4

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -452.0
offset_right = 452.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jbxfc")
theme_override_font_sizes/font_size = 60
text = "Choose your character:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -491.0
offset_top = -193.0
offset_right = 491.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonBrawlerGirl" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
focus_mode = 0
flat = true

[node name="AnimatedBrawlerGirl" type="AnimatedSprite2D" parent="HBoxContainer/ButtonBrawlerGirl"]
position = Vector2(216, 178)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_jo0i6")
frame_progress = 1.0

[node name="NameBrawlerGirl" type="Label" parent="HBoxContainer/ButtonBrawlerGirl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -93.0
offset_right = 169.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jbxfc")
theme_override_font_sizes/font_size = 32
text = "Brawler Girl"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select1" type="AudioStreamPlayer" parent="HBoxContainer/ButtonBrawlerGirl"]
stream = ExtResource("5_3pplr")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bts7n")

[node name="ButtonLongTail" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
focus_mode = 0
flat = true

[node name="NameLongTail" type="Label" parent="HBoxContainer/ButtonLongTail"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -93.0
offset_right = 169.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_jbxfc")
theme_override_font_sizes/font_size = 32
text = "Long Tail"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedLongTail" type="AnimatedSprite2D" parent="HBoxContainer/ButtonLongTail"]
position = Vector2(211, 178)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_sfrxf")
frame = 1
frame_progress = 0.757879

[node name="Select2" type="AudioStreamPlayer" parent="HBoxContainer/ButtonLongTail"]
stream = ExtResource("5_3pplr")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wiyfn")
autoplay = true
